--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,7 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+CLAUDE.md
+.claude/settings.local.json
+src/agent/attractions.ipynb
+src/mcp/courses-mcp/.python-version
